# SpecDec

./: .gitignore  README.md  python.py
outputs/SpecDec/: pyproject.toml
outputs/SpecDec 2/: README.md
outputs/SpecDec 2/scripts/: colab_cuda_kernel_setup.sh
outputs/SpecDec 2/specdec/: __init__.py  core.py  cuda_extension.py  hf.py
outputs/SpecDec 3/: .gitignore
outputs/SpecDec 3/specdec/: distributions.py  models.py
outputs/SpecDec 4/scripts/: test.sh
outputs/SpecDec 4/specdec/: benchmark.py
outputs/SpecDec 4/tests/: test_distributions.py
outputs/SpecDec/scripts/: benchmark_gpt2_cpu.sh  benchmark_gpt2_cuda.sh  benchmark_toy.sh
outputs/SpecDec/specdec/: adaptive.py  cli.py
results/: README.md  acceptance_kernel_t4.json
scripts/: benchmark_acceptance_kernel.py
specdec/cuda/: acceptance_rejection_kernel.cu
tests/: test_speculative_core.py
