[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specdec"
version = "0.1.0"
description = "From-scratch exact speculative decoding engine after Leviathan et al. 2023"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
hf = [
  "torch>=2.3",
  "transformers>=4.44",
  "accelerate>=0.33",
]
dev = [
  "pytest>=8",
]

[project.scripts]
specdec = "specdec.cli:main"

[tool.setuptools.packages.find]
include = ["specdec*"]
